# ensemble-reasoning

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  arbiter.config.example.json  pyproject.toml
docs/: code_review.md  spec.md  vision.md
src/arbiter/: __init__.py  cli.py  config.py  engine.py  env.py  manifest.py  runflow.py  storage.py  summarizer.py  validation.py
src/arbiter/catalog/: __init__.py  models.json  personas.json
src/arbiter/clustering/: __init__.py  online.py
src/arbiter/embeddings/: __init__.py  client.py  mock.py  openrouter.py  types.py
src/arbiter/llm/: __init__.py  client.py  mock.py  openrouter.py  types.py
src/arbiter/ui/: __init__.py  app.py  console.py  progress.py  render.py  screens.py  styles.tcss  theme.py  widgets.py
src/arbiter/wizard/: __init__.py  flow.py  state.py  steps.py
tests/: conftest.py  test_artifacts.py  test_convergence_trace.py  test_determinism.py  test_validator.py  utils.py
