[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ensemble-reasoning"
version = "0.1.0.dev0"
description = "Research harness for ensemble reasoning experiments."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
dependencies = [
  "httpx>=0.28.0",
  "rich>=14.0.0",
  "typer>=0.21.0",
  "textual>=0.70.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
arbiter = "arbiter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arbiter"]
include = ["src/arbiter/catalog/*.json", "src/arbiter/ui/*.tcss"]

[tool.hatch.build.targets.sdist]
include = ["src/arbiter/catalog/*.json", "src/arbiter/ui/*.tcss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
